--- a/project-template/react/pages/index/index.html
+++ b/project-template/react/pages/index/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>index</title>
+    <title>首页</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"/>
     <meta content="telephone=no" name="format-detection" />
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="$$_CDNURL_$$/index/index.css">
 </head>
 <body>
-    <div id="app">
-        <router-view></router-view>
-    </div>
+    <div id="app"></div>
     <script src="$$_CDNURL_$$/common.js"></script>
     <script src="$$_CDNURL_$$/index/index.js"></script>
 </body>
